--- a/Main_realtor.ipynb
+++ b/Main_realtor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4     680.0         NaN       NaN  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4     680.0         NaN  Not Sold  "
       ]
      },
-     "execution_count": 234,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "525"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "85141"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "29139  0 Ashmun  Springfield  Massachusetts     1101       580.0  Not Sold  "
       ]
      },
-     "execution_count": 258,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "Name: status, dtype: int64"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "str"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
        "[5295 rows x 12 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "Name: status, dtype: int64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "[14719 rows x 11 columns]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,18 +1581,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analytics "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv(path_or_buf='D:\\Data_Science_Documents\\Realtor_Data\\data_files\\clean_data.csv')"
+   ]
   }
  ],
  "metadata": {
